# android_headset_renderer

./: .gitmodules  settings.gradle
app/: AndroidManifest.xml  CMakeLists.txt  build.gradle.kts
app/cpp/: CMakeLists.txt  application.h  compile_shaders.sh  graphics_plugin.hpp  main.cpp  openxr_program.cpp  openxr_program.hpp  vulkan_swapchain_context.cpp
app/cpp/vulkan/: vulkan_rendering_context.hpp
